--- a/EasyLib/app/src/main/res/layout-xlarge/login.xml
+++ b/EasyLib/app/src/main/res/layout-xlarge/login.xml
@@ -45,11 +45,12 @@
 
     <ImageButton
         android:id="@+id/fb_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="470dp"
+        android:layout_height="90dp"
         android:layout_marginTop="35dp"
         android:background="@android:color/transparent"
         android:onClick="loginFb"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.552"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,11 +59,12 @@
 
     <ImageButton
         android:id="@+id/g_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="470dp"
+        android:layout_height="90dp"
         android:layout_marginTop="25dp"
         android:background="@android:color/transparent"
         android:onClick="loginGoogle"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +97,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="36sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/login_bt"
         app:layout_constraintHorizontal_bias="0.62"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +114,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="36sp"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="@+id/email"
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
