--- a/EasyLib/app/src/main/res/layout-normal/fragment_queue_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_queue_item.xml
@@ -45,16 +45,15 @@
         android:background="@color/colorWhite"
         android:orientation="horizontal"
         android:paddingLeft="30dp"
-        android:paddingTop="20dp"
+        android:paddingTop="10dp"
         android:paddingRight="30dp"
-        android:paddingBottom="20dp"
         android:visibility="visible">
 
         <ImageView
             android:id="@+id/queue_img"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_weight="0.5"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
+            android:scaleType="fitXY"
             app:srcCompat="@color/colorPrimary" />
 
         <LinearLayout
@@ -62,7 +61,8 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="10dp">
 
             <TextView
                 android:id="@+id/queue_title"
