--- a/EasyLib/app/src/main/res/layout-normal/fragment_queue_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_queue_item.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="105dp">
 
     <LinearLayout
         android:id="@+id/queue_background"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@color/RedDelete"
+        android:background="@drawable/red_round_rect_shadow"
         android:orientation="horizontal"
         android:paddingLeft="30dp"
         android:paddingTop="30dp"
@@ -42,7 +42,7 @@
         android:id="@+id/queue_foreground"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@color/colorWhite"
+        android:background="@drawable/round_rect_shadow"
         android:orientation="horizontal"
         android:paddingLeft="30dp"
         android:paddingTop="10dp"
