--- a/EasyLib/app/src/main/res/layout-normal/toolbar_home.xml
+++ b/EasyLib/app/src/main/res/layout-normal/toolbar_home.xml
@@ -84,8 +84,7 @@
         android:id="@+id/advanced_search_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="145dp"
-        android:background="@color/colorWhite"
-        android:foreground="@drawable/round_rect_shadow"
+        android:background="@drawable/round_rect_shadow"
         android:orientation="vertical"
         android:paddingTop="5dp"
         android:paddingRight="30dp"
