--- a/EasyLib/app/src/main/res/layout-normal/register.xml
+++ b/EasyLib/app/src/main/res/layout-normal/register.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/login_back"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
