--- a/EasyLib/app/src/main/res/layout-normal/fragment_home.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main.HomeFragment">
+    tools:context=".Activities.Fragments.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
