--- a/EasyLib/app/src/main/res/layout-normal/login_preference.xml
+++ b/EasyLib/app/src/main/res/layout-normal/login_preference.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login_pref_back"
-    tools:context=".Login.LoginPreference">
+    tools:context=".Activities.Login.LoginPreference">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline4"
