--- a/EasyLib/app/src/main/res/layout-normal/main.xml
+++ b/EasyLib/app/src/main/res/layout-normal/main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main.MainActivity">
+    tools:context=".Activities.Fragments.MainActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
