--- a/EasyLib/app/src/main/res/layout-normal/fragment_home.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_home.xml
@@ -20,6 +20,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="24dp"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
