--- a/EasyLib/app/src/main/res/layout-normal/fragment_home_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_home_item.xml
@@ -50,4 +50,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_home_item_recycle_event" />
 
+    <Button
+        android:id="@+id/fragment_home_item_recycle_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="See Library"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_home_item_recycle_book" />
+
 </android.support.constraint.ConstraintLayout>
