--- a/EasyLib/app/src/main/res/layout-normal/fragment_profile.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_profile.xml
@@ -57,10 +57,12 @@
                     android:id="@+id/profile_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="serif"
+                    android:fontFamily="sans-serif-condensed"
+                    android:singleLine="true"
                     android:text="Name Surname"
+                    android:textAlignment="center"
                     android:textColor="@android:color/white"
-                    android:textSize="24sp"
+                    android:textSize="26sp"
                     app:layout_constraintBottom_toTopOf="@+id/profile_email"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -70,7 +72,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
+                    android:singleLine="true"
                     android:text="email@email.it"
+                    android:textAlignment="center"
                     android:textColor="@android:color/white"
                     android:textSize="18sp"
                     android:textStyle="italic"
@@ -79,6 +83,34 @@
                     app:layout_constraintStart_toStartOf="parent" />
 
             </android.support.constraint.ConstraintLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Your User ID"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/profile_fragment_user_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:fontFamily="sans-serif-black"
+                    android:text="000000"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -103,10 +135,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="serif"
+                    android:fontFamily="serif-monospace"
                     android:text="Favourite Libraries"
+                    android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
+                    android:textStyle="bold|italic"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -146,10 +180,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="serif"
+                    android:fontFamily="serif-monospace"
                     android:text="Rated Books"
+                    android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
+                    android:textStyle="bold|italic"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
