--- a/EasyLib_Librarian/app/src/main/res/values/colors.xml
+++ b/EasyLib_Librarian/app/src/main/res/values/colors.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#d81b60</color>
+
+    <color name="Transparent">#00ffffff</color>
 
     <color name="colorWhite">#ffffff</color>
     <color name="colorWhiteTransparent">#95ffffff</color>
+    <color name="colorDarkWhite">#dadada</color>
+    <color name="colorGray">#cccccc</color>
+
     <color name="colorYellow">#ffd416</color>
+    <color name="RedDelete">#f92525</color>
+
+    <color name="colorDarkBlueTransparent">#dc212d42</color>
+    <color name="blackBar">#252525</color>
 </resources>
