--- a/EasyLib_Librarian/app/src/main/res/layout-xlarge/book_activity.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-xlarge/book_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -30,7 +31,7 @@
                 android:singleLine="true"
                 android:text="Title of the Book"
                 android:textAlignment="center"
-                android:textSize="26sp"
+                android:textSize="36sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -43,63 +44,11 @@
                 android:singleLine="true"
                 android:text="Name Surname"
                 android:textAlignment="center"
-                android:textSize="18sp"
+                android:textSize="28sp"
                 android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/book_activity_title" />
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <com.makeramen.roundedimageview.RoundedImageView
-                    android:id="@+id/book_activity_image"
-                    android:layout_width="200dp"
-                    android:layout_height="250dp"
-                    android:layout_marginStart="55dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="55dp"
-                    app:riv_corner_radius="10dp" />
-
-                <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="25dp"
-                    android:layout_marginStart="200dp"
-                    android:layout_marginTop="235dp"
-                    android:layout_marginEnd="55dp"
-                    android:orientation="horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
-
-                    <TextView
-                        android:id="@+id/book_activity_average_rate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="25dp"
-                        android:layout_weight="3"
-                        android:fontFamily="monospace"
-                        android:text="0"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorYellow"
-                        android:textSize="20sp" />
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_marginTop="3dp"
-                        android:layout_weight="1"
-                        android:scaleType="fitCenter"
-                        app:srcCompat="@drawable/ic_star" />
-                </LinearLayout>
-            </FrameLayout>
-
-            <TextView
-                android:id="@+id/book_activity_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Description"
-                android:textAlignment="center" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -107,43 +56,80 @@
                 android:layout_marginTop="16dp"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
+                <FrameLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Your Rate"
-                    android:textAlignment="center"
-                    android:textSize="16sp" />
+                    android:layout_weight="0.6">
 
-                <EditText
-                    android:id="@+id/book_activity_your_rate"
-                    android:layout_width="50dp"
+                    <com.makeramen.roundedimageview.RoundedImageView
+                        android:id="@+id/book_activity_image"
+                        android:layout_width="200dp"
+                        android:layout_height="250dp"
+                        android:layout_marginStart="55dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="55dp"
+                        app:riv_corner_radius="10dp" />
+
+                    <LinearLayout
+                        android:layout_width="40dp"
+                        android:layout_height="25dp"
+                        android:layout_marginStart="200dp"
+                        android:layout_marginTop="235dp"
+                        android:layout_marginEnd="55dp"
+                        android:orientation="horizontal"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent">
+
+                        <TextView
+                            android:id="@+id/book_activity_average_rate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="25dp"
+                            android:layout_weight="3"
+                            android:fontFamily="monospace"
+                            android:text="0"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorYellow"
+                            android:textSize="20sp" />
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="3dp"
+                            android:layout_weight="1"
+                            android:scaleType="fitCenter"
+                            app:srcCompat="@drawable/ic_star" />
+                    </LinearLayout>
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/book_activity_description"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="number"
-                    android:background="@color/Transparent"
-                    android:imeOptions="actionSearch"
-                    android:text="Set here.."
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_weight="0.4"
+                    android:text="Description"
                     android:textAlignment="center"
-                    android:textColor="@android:color/darker_gray" />
+                    android:textSize="24sp" />
+
             </LinearLayout>
 
             <TextView
                 android:id="@+id/textView17"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Available in these Libraries"
+                android:layout_marginTop="32dp"
+                android:text="Reservations"
                 android:textAlignment="center"
-                android:textSize="16sp" />
+                android:textSize="24sp" />
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/book_activity_lib_recycle"
+                android:id="@+id/book_activity_reservations_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp" />
+                android:layout_marginTop="32dp"
+                tools:listitem="@layout/book_activity_reservation_item" />
 
         </LinearLayout>
     </ScrollView>
