--- a/EasyLib/app/src/main/res/layout-xlarge/login_preference.xml
+++ b/EasyLib/app/src/main/res/layout-xlarge/login_preference.xml
@@ -44,7 +44,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="50dp"
-        android:onClick="skip"
+        android:onClick="skipOnClick"
         android:text="Skip"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
