--- a/EasyLib/app/src/main/res/layout-normal/fragment_home.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_home.xml
@@ -5,13 +5,12 @@
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Fragments.HomeFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".Activities.Fragments.MainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:overScrollMode="never"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,10 +18,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="24dp"
+            android:layout_marginRight="20dp"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
@@ -39,13 +38,12 @@
             <Button
                 android:id="@+id/allLibraries_home_fragment"
                 style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="60dp"
                 android:text="All Libraries"
                 android:textAlignment="center" />
-
         </LinearLayout>
     </ScrollView>
-
 </android.support.constraint.ConstraintLayout>
