--- a/EasyLib/app/src/main/res/layout-normal/main.xml
+++ b/EasyLib/app/src/main/res/layout-normal/main.xml
@@ -56,8 +56,9 @@
         android:id="@+id/main_frame"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="25dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navbar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"></FrameLayout>
