--- a/EasyLib/app/src/main/res/layout-normal/library_activity.xml
+++ b/EasyLib/app/src/main/res/layout-normal/library_activity.xml
@@ -40,6 +40,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <TextView
@@ -71,11 +72,12 @@
 
                     <com.makeramen.roundedimageview.RoundedImageView
                         android:id="@+id/library_activity_image"
-                        android:layout_width="200dp"
-                        android:layout_height="250dp"
+                        android:layout_width="250dp"
+                        android:layout_height="200dp"
                         android:layout_marginStart="55dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="55dp"
+                        android:scaleType="fitXY"
                         app:riv_corner_radius="10dp" />
 
                     <TextView
@@ -93,7 +95,6 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView8"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.6"
@@ -165,7 +166,7 @@
                             android:id="@+id/library_activity_news_recycle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp" >
+                            android:layout_marginTop="16dp">
 
                         </android.support.v7.widget.RecyclerView>
 
@@ -241,10 +242,13 @@
 
                     <Button
                         android:id="@+id/library_activity_fav_lib_button"
-                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_marginTop="8dp"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Set Favourite" />
+                        android:text="Set Favourite"
+                        android:textColor="@android:color/holo_green_light"
+                        android:textSize="18sp" />
 
                 </LinearLayout>
             </ScrollView>
